--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -113,11 +113,11 @@
       a then new privacy policy may apply.
     </p>
     
-    <h3 class="freetext">Request stored data and possibilities for contact</h3>
+    <h3 class="freetext">Request stored data, changes to them, and possibilities for contact</h3>
 
     <p style="text-align:justify;">
       According to European law, you are entitled to request personal
-      data, belonging to you as a person, which is stored on this web
+      data, belonging to you as a person, which may be stored on this web
       site.  Moreover, you have the right to request correction or
       deletion of such data.  In case of questions about how such data
       may be collected or how it can be deleted, or in case you wish
@@ -125,7 +125,17 @@
       contact us directly via the contact section, e.g., available at
       the bottom of this page or in the Impressum.
     </p>
-    
+
+    <p style="text-align:justify;">
+      In case of breach of conduct in terms of users' privacy rights,
+      affected parties have the rights to contact a corresponding
+      governing body, the so-called Datenschutzbeauftragte.  This body
+      is located in the same state as the responsible person of this
+      web site (see Impressum).  A list of all such governing  bodies
+      can be found at this link:
+      <a href="https://www.bfdi.bund.de/EN/Home/home_node.html">Datenschutzbeauftragte</a>.
+    </p>
+
   </div>
 
   <div class="col text-center">
