--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -133,17 +133,27 @@
       Datenschutzerklärung.
     </p>
     
-    <h3 class="freetext">Auskunftsrecht und Kontaktmöglichkeit</h3>
+    <h3 class="freetext">Auskunfts- und Beschwerderecht, Widerruf und Kontaktmöglichkeit</h3>
 
     <p style="text-align:justify;">
       Sie haben ein Recht auf unentgeltliche Auskunft über die bei uns
       zu Ihrer Person gespeicherten Daten sowie ggf. ein Recht auf
-      Berichtigung, Sperrung oder Löschung dieser Daten. Bei Fragen
-      zur Erhebung, Verarbeitung oder Nutzung Ihrer personenbezogenen
+      Berichtigung, Sperrung oder Löschung dieser Daten. Bei weiteren Fragen
+      zur Erhebung, Verarbeitung oder Nutzung von personenbezogenen
       Daten, bei Auskünften, Berichtigung, Sperrung oder Löschung von
-      Daten sowie Widerruf erteilter Einwilligungen oder Widerspruch
+      Daten sowie Widerruf evtl. erteilter Einwilligungen oder Widerspruch
       gegen eine bestimmte Datenverwendung wenden Sie sich bitte
       direkt an uns über die Kontaktdaten in unserem Impressum.
+    </p>
+
+    <p style="text-align:justify;">
+      Im Falle datenschutzrechtlicher Verstöße steht den Betroffenen ein
+      Beschwerderecht bei der zuständigen Aufsichtsbehörde zu. Zuständige
+      Aufsichtsbehörde in datenschutzrechtlichen Fragen ist der
+      Landesdatenschutzbeauftragte des Bundeslandes, in dem der Betreiber
+      dieser Website seinen Sitz hat. Eine Liste der Datenschutzbeauftragten
+      sowie deren Kontaktdaten können folgendem Link entnommen werden:
+      <a href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html">Datenschutzbeauftragte</a>.
     </p>
     
   </div>
