--- a/backend/public/html/login.html
+++ b/backend/public/html/login.html
@@ -20,7 +20,7 @@
 <body class="text-center">
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
-    <form class="form-signin" action="/login" method="POST">
+    <form class="form-signin" action="/api/login" method="POST">
       <a href="/assets/html/index.html"><img src="img/logo_small.png"></a>
         <h2 class="freetext">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
