--- a/backend/public/html/register.html
+++ b/backend/public/html/register.html
@@ -21,14 +21,16 @@
 
 <div style="width:100%; margin-bottom:100px;" class="text-center">
   <a href="/assets/html/index.html"><img src="img/logo_small.png"></a>
-  <h1 class="h3 mb-5 font-weight-normal" style="padding-top:30px;">Registration currently not possible!</h1>
+  <h1 class="h3 mb-5 font-weight-bold" style="padding-top:30px;">
+      Sorry, registration unavailable while OOREP is in beta-testing stage
+  </h1>
   
   <p class="mt-8 mb-5 text-muted">
-    <img src="img/pharmacy-3377670_640.jpg">
+      <a href="/assets/html/index.html"><img class="image" src="img/pharmacy-3377670_640.jpg"></a>
   </p>
   
   <p class="mt-8 mb-5 text-muted">
-    <b><a href="/assets/html/index.html">Go back to main page instead!</a></b>
+    <b><a href="/assets/html/index.html">Go back to main page</a></b>
   </p>
 </div>
 
