Policy updates; removed superfluous available_reps REST-call

--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -103,16 +103,7 @@
       we are using state-of-practice data encryption techniques (e.g.,
       SSL) over HTTPS.
     </p>
-    
-    <h3 class="freetext">Change of our privacy policy</h3>
 
-    <p style="text-align:justify;">
-      We reserve the right to adjust this privacy policy so that it
-      always satisfies and adheres to current legal requirements or to
-      reflect changes in our service offering.  For your renewed visit
-      a then new privacy policy may apply.
-    </p>
-    
     <h3 class="freetext">Request stored data, changes to them, and possibilities for contact</h3>
 
     <p style="text-align:justify;">
@@ -134,6 +125,19 @@
       web site (see Impressum).  A list of all such governing  bodies
       can be found at this link:
       <a href="https://www.bfdi.bund.de/EN/Home/home_node.html">Datenschutzbeauftragte</a>.
+    </p>
+
+    <h3 class="freetext">Change of our privacy policy</h3>
+
+    <p style="text-align:justify;">
+      This privacy policy has been put online on January 27, 2020 and is currently valid.
+    </p>
+
+    <p style="text-align:justify;">
+      We reserve the right to adjust this privacy policy so that it
+      always satisfies and adheres to current legal requirements or to
+      reflect changes in our service offering.  For your renewed visit
+      a then new privacy policy may apply.
     </p>
 
   </div>
