Add kent and publicum, update web site documentation

--- a/backend/public/html/faq.html
+++ b/backend/public/html/faq.html
@@ -93,17 +93,15 @@
     <h5 class="freetext">&bull; Who wrote OOREP?</h5>
 
 	<p style="text-align:justify;">
-	OOREP was written by Andreas Bauer (see also contact
-	section at the bottom of this site or impressum for
-	German-speaking users) in his copious spare time.
-	
-	It is based on a lot of other open source software such as
-	Scala, Scala.Js, Play, PostgreSQL and others, and its source
-	code can be freely obtained from its git repository.  Its
-	source code is published under the so-called GNU General
-	Public License (short: GPL) and as such, OOREP comes with no
-	warranty, no guarantees, not even fitness for a particular
-	purpose.
+		OOREP was written by Andreas Bauer (see also contact
+		section at the bottom of this site or impressum for
+		German-speaking users) in his copious spare time.
+
+		Its source code can be freely obtained from its
+		<a href="https://gitlab.com/nondeterministic/oorep">git repository</a>.
+		It is published under the so-called GNU General	Public License
+		(short: GPL) and as such, OOREP comes with no warranty, no
+		guarantees, not even fitness for a particular purpose.
     </p>
 
     <h5 class="freetext">&bull; What repertories do you use?</h5>
@@ -112,10 +110,10 @@
 		At the moment, there are seven different repertories installed
 		on this server.  We do <b>not</b> consider them to be part of
 		OOREP itself though.  Until further notice, the OOREP source
-		code is only accompanied by the <i>kent-de</i> repertory (see
-		list below).  The other repertories are served on this very
-		server for your convenience, but are presently not intended
-		for any further redistribution.
+		code is only accompanied by the <i>kent-de</i> and <i>publicum</i>
+		repertories (see list below).  The other repertories are served
+		on this very server for your convenience, but are presently not
+		intended for any further redistribution.
     </p>
 
     <p style="text-align:justify;">
@@ -183,9 +181,17 @@
     <h5 class="freetext">&bull; Who made the graphics on this web site?</h5>
 
     <p style="text-align:justify;">
-	Please see the impressum (bottom of this page) for the
-	respective attribution.
+	Please see the impressum (link at the bottom of this page) for the respective attribution.
     </p>
+
+    <h5 class="freetext">&bull; Which third-party libraries and fonts are used on this web site?</h5>
+
+    <p style="text-align:justify;">
+		This web-site, which hosts a running version of OOREP, was built using
+		a number of third-party libraries and fonts that are not part of OOREP
+		or its git repository.  You will find an overview in the impressum
+		(link at the bottom of this page).
+	</p>
 
   </div>
   
