--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -47,7 +47,9 @@
     
     <p style="text-align:justify;">
       <b>Hinweis:</b> OOREP ist kostenfreie Software, dessen
-      Quell-Code unter der GPL-Lizenz veröffentlicht wurde.
+      Quell-Code unter der GPL-Lizenz veröffentlicht wurde
+      (s.a. öffentliches
+      <a href="https://gitlab.com/nondeterministic/oorep">git-Repository</a>).
       Es findet aktuell keinerlei kommerzielle Verwertung dieser
       Webseite statt.
     </p>
@@ -118,11 +120,35 @@
       Urheberrechten.
     </p>
 
-    <h3 class="freetext">Schriften</h3>
+    <h3 class="freetext">Bibliotheken und Schriften von Drittanbietern</h3>
+
+    <p style="text-align:justify;">
+      Diese Webseite verwendet Bibliotheken und Schriften von Drittanbietern,
+      die nicht Teil von OOREP selbst bzw. dessen git-Repository sind. Im Einzelnen
+      sind das:
+    </p>
 
     <ul>
-      <li>Linux Libertine Display: <a href="https://en.wikipedia.org/wiki/Linux_Libertine">Philipp H. Poll</a></li>
+      <li><a href="https://getbootstrap.com/">bootstrap</a>
+        (v4.1.3, Copyright 2011-2018 The Bootstrap Authors, MIT-License)</li>
+      <li><a href="https://jquery.com/">jquery</a>
+        (v3.3.1, Copyright JS Foundation and other contributors, MIT-License)</li>
+      <li><a href="https://popper.js.org/">popper</a>
+        (v1.15.0, Copyright 2018 Federico Zivolo, MIT-License)</li>
+      <li><a href="https://github.com/jpillora/notifyjs">notify.js</a>
+        (v0.4.2, Copyright Jaime Pillora, MIT-License)</li>
+      <li><a href="https://useiconic.com/open">Open Iconic</a> font
+        (v1.1.1, MIT- and Open-Font-Licenses)</li>
+      <li><a href="https://en.wikipedia.org/wiki/Linux_Libertine">Linux Libertine Display</a> font
+        (Copyright Philipp H. Poll, MIT- or GPL-License)</li>
     </ul>
+
+    <p style="text-align:justify;">
+      All diese Bibliotheken und Schriften werden lokal auf dieser Webseite
+      eingebunden, so dass keine Verbindung zu weiteren Rechnern im Internet
+      aufgebaut werden muss oder zusätzliche Cookies o.ä., deren Ursprung
+      nicht diese Webseite selbst ist, auf den Rechner des Benutzers gelangen.
+    </p>
 
     <h3 class="freetext">Repertorien</h3>
 
