--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -103,7 +103,7 @@
       der Webseite ist auch ohne diese Kategorie Cookie gegeben.
     </p>
 
-    <h3 class="freetext">Drittanbieter Software, Tracker, externe Fonts und Werbung</h3>
+    <h3 class="freetext">Drittanbieter Software, Tracker, externe Schriften und Werbung</h3>
 
     <p style="text-align:justify;">
       Diese Webseite verwendet augenblicklich keinerlei externe
