more fine tuning of privacy policies

--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -114,6 +114,16 @@
       gelangen.
     </p>
 
+    <h3 class="freetext">
+      Automatisierte Entscheidungen und Profiling
+    </h3>
+
+    <p style="text-align:justify;">
+      Diese Webseite bedient sich keiner automatisierten Prozesse zur Entscheidungsfindung
+      (einschließlich Profiling), die rechtliche Wirkung für Sie entfalten oder Sie in ähnlicher Weise
+      beeinträchtigen.
+    </p>
+
     <h3 class="freetext">SSL-Verschlüsselung</h3>
 
     <p style="text-align:justify;">
@@ -124,25 +134,74 @@
 
     <h3 class="freetext">Auskunfts- und Beschwerderecht, Widerruf und Kontaktmöglichkeit</h3>
 
-    <p style="text-align:justify;">
-      Sie haben ein Recht auf unentgeltliche Auskunft über die bei uns
-      zu Ihrer Person gespeicherten Daten sowie ggf. ein Recht auf
-      Berichtigung, Sperrung oder Löschung dieser Daten. Bei weiteren Fragen
-      zur Erhebung, Verarbeitung oder Nutzung von personenbezogenen
-      Daten, bei Auskünften, Berichtigung, Sperrung oder Löschung von
-      Daten sowie Widerruf evtl. erteilter Einwilligungen oder Widerspruch
-      gegen eine bestimmte Datenverwendung wenden Sie sich bitte
-      direkt an uns über die Kontaktdaten in unserem Impressum.
+    <p>
+      Gemäß anwendbaren Datenschutzgesetzen, haben Sie folgende Rechte:
     </p>
 
+    <ul>
+      <li style="text-align:justify;">
+        <b>Recht auf Zugriff:</b>
+        Sie haben das Recht, vom Webseitenbetreiber eine Bestätigung darüber zu verlangen, ob von Ihnen betreffende
+        personenbezogene Daten verarbeitet werden; ist dies der Fall, haben Sie das Recht, Zugriff auf diese
+        personenbezogenen Daten zu erhalten.
+      </li>
+      <li style="text-align:justify;">
+        <b>Recht auf Berichtigung:</b>
+        Sie haben das Recht, von dem Webseitenbetreiber die Berichtigung Sie betreffender unrichtiger
+        personenbezogener Daten zu verlangen.
+      </li>
+      <li style="text-align:justify;">
+        <b>Recht auf Löschung:</b>
+        Sie haben das Recht, die Löschung Sie betreffender personenbezogener Daten zu verlangen (z.B. wenn
+        die Verarbeitung der personenbezgenen Daten für den Zweck, für den sie erhoben wurden, nicht mehr
+        erforderlich ist).
+      </li>
+      <li style="text-align:justify;">
+        <b>Recht auf Einschränkung:</b>
+        Sie haben das Recht unter bestimmten Voraussetzungen die Einschränkung der Verarbeitung Sie betreffender
+        personenbezogener Daten zu verlangen (z.B. wenn Sie die Richtigkeit dieser personenbezogenen Daten bestreiten).
+      </li>
+      <li style="text-align:justify;">
+        <b>Recht auf Übermittlung:</b>
+        Sie haben das Recht in bestimmten Fällen die Übermittlung Ihrer personenbezogenen Daten an Sie oder an Dritte
+        zu verlangen.
+      </li>
+      <li style="text-align:justify;">
+        <b>Recht auf Freiheit von Profiling:</b>
+        Sie haben das Recht, keiner automatisierten Entscheidungsfindung (einschließlich Profiling) unterworfen zu sein,
+        die Ihnen gegenüber rechtliche Wirkung entfaltet oder Sie in ähnlicher Weise erheblich beeinträchtigt.
+      </li>
+      <li style="text-align:justify;">
+        <b>Recht auf Widerspruch:</b>
+        Sie haben das Recht jederzeit Widerspruch gegen die Verarbeitung Ihrer personenbezogenen Daten durch den
+        Webseitenbetreiber einzulegen, und zwar bei Direktwerbung oder aus Gründen, die sich aus Ihrer besonderen
+        Situation ergeben, sofern der Webseitenbetreiber Ihre personenbezogenen Daten zur Wahrung seiner berechtigten
+        Interessen verarbeitet.
+        Möchten Sie von Ihrem Widerrufs- oder Widerspruchsrecht Gebrauch machen, genügt eine E-Mail an die Adresse,
+        die im Impressum genannt wird.
+      </li>
+    </ul>
+
     <p style="text-align:justify;">
-      Im Falle datenschutzrechtlicher Verstöße steht den Betroffenen ein
+      Im Falle datenschutzrechtlicher Verstöße steht den Betroffenen außerdem ein
       Beschwerderecht bei der zuständigen Aufsichtsbehörde zu. Zuständige
       Aufsichtsbehörde in datenschutzrechtlichen Fragen ist der
       Landesdatenschutzbeauftragte des Bundeslandes, in dem der Betreiber
       dieser Website seinen Sitz hat. Eine Liste der Datenschutzbeauftragten
       sowie deren Kontaktdaten können folgendem Link entnommen werden:
       <a href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html">Datenschutzbeauftragte</a>.
+    </p>
+
+    <p style="text-align:justify;">
+      Sofern wir, die Webseitenbetreiber, Ihre personenbezogenen Daten auf Grundlage einer Einwilligung verarbeiten, haben Sie
+      darüber hinaus das Recht, Ihre Einwilligung mit Wirkung für die Zukunft zu widerrufen.
+    </p>
+
+    <p style="text-align:justify;">
+      Die Ausübung vorstehend genannter Rechte erfordert das Vorliegen bestimmter rechtlicher Voraussetzungen. In
+      bestimmten Fällen kann die Ausübung Ihrer Rechte aufgrund gesetzlicher Ausnahmen eingeschränkt sein (z.B. Art.
+      17 Abs. 3 und Art. 22 Abs. 2 DSGVO). Sollten Sie in diesem Zusammenhang Fragen haben oder Ihre Rechte ausüben
+      wollen, kontaktieren Sie den Webseitenbetreiber unter den im Impressum genannten Kontaktdaten.
     </p>
 
     <h3 class="freetext">Aktualität und Änderung dieser Datenschutzerklärung</h3>
