--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -95,7 +95,17 @@
       possible that any third-party cookies will be transmitted to the
       user's browsing device by using this web site.
     </p>
-    
+
+    <h3 class="freetext">
+      Automated decision making and profiling
+    </h3>
+
+    <p style="text-align:justify;">
+      This web site does not employ any automated processes to make decisions on your behalf
+      (including profiling), which are legally binding for you or constrain you in such a
+      manner.
+    </p>
+
     <h3 class="freetext">SSL encryption</h3>
 
     <p style="text-align:justify;">
@@ -107,15 +117,48 @@
     <h3 class="freetext">Request stored data, changes to them, and possibilities for contact</h3>
 
     <p style="text-align:justify;">
-      According to European law, you are entitled to request personal
-      data, belonging to you as a person, which may be stored on this web
-      site.  Moreover, you have the right to request correction or
-      deletion of such data.  In case of questions about how such data
-      may be collected or how it can be deleted, or in case you wish
-      to withdraw consent for collection of personal data, please
-      contact us directly via the contact section, e.g., available at
-      the bottom of this page or in the Impressum.
+      Under data protection regulations, you have rights over how your personal information is used by others.
     </p>
+
+    <ul>
+      <li style="text-align:justify;">
+        <b>Right to access:</b>
+        You have the right to access the personal information we hold about you. You also have the right
+        to get access to this information.
+      </li>
+      <li style="text-align:justify;">
+        <b>Right to rectification:</b>
+         If the information we hold about you contains errors, you have the right for it to be corrected.
+      </li>
+      <li style="text-align:justify;">
+        <b>Right to erasure:</b>
+        You have the right to request we erase the information we hold about you from our records if you think
+        it is no longer required for a certain purpose.
+      </li>
+      <li style="text-align:justify;">
+        <b>Right to restriction:</b>
+        If you think your personal information is being used for things it shouldn’t be, you have the right
+        to request we stop using it that way.
+      </li>
+      <li style="text-align:justify;">
+        <b>Right to portability:</b>
+        There may be times when you want a particular portion of the information we hold about you to be moved
+        to a third party or made portable.  You have the right to request that from us.
+      </li>
+      <li style="text-align:justify;">
+        <b>Right to freedom of profiling:</b>
+        You have the right to not be subjected to automated profiling or decision making processes on this web site
+        that would have legally binding consequences for you.
+      </li>
+      <li style="text-align:justify;">
+        <b>Right to objection:</b>
+        You have the right to object to us, the web site providers, to the collecting and processing of your
+        personal data on the grounds of being subjected to direct marketing campaigns or for reasons, which
+        originate from your particular situation.  Should you want to make use of your right to objection,
+        it is sufficient to write to us an E-Mail to the address given in the impressum of this web site (see
+        link at the bottom of this web site).
+      </li>
+    </ul>
 
     <p style="text-align:justify;">
       In case of breach of conduct in terms of users' privacy rights,
@@ -125,6 +168,18 @@
       web site (see Impressum).  A list of all such governing  bodies
       can be found at this link:
       <a href="https://www.bfdi.bund.de/EN/Home/home_node.html">Datenschutzbeauftragte</a>.
+    </p>
+
+    <p style="text-align:justify;">
+      If we, the web site provider, processes your personal data based on your given permission, you have the right
+      to recall said permission for now and in the future.
+    </p>
+
+    <p style="text-align:justify;">
+      Making use of the aforementioned rights is based on some legal prerequisites.  In some cases, the extent to
+      which you may execute a certain right may be restricted due to legal exceptions (e.g., Art. 17/3 and Art. 22/2 DSGVO).
+      Should you have questions in this regard or wish to execute your rights, please contact us, the web site
+      providers, at the given address in the impressum (see link at the bottom of this web site).
     </p>
 
     <h3 class="freetext">Change of our privacy policy</h3>
