pull out JS code from privacy policies

--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -198,7 +198,10 @@
   </div>
 
   <div class="col text-center">
-    <a href="javascript:void(0)" onclick="$('#content').load('/assets/html/datenschutz.html')"><img src="/assets/html/img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
+    <a href="#" onclick="oorepLoadIntoContentDiv('/assets/html/datenschutz.html');"><img src="/assets/html/img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
+    <!--
+    <a href="#" onclick="$('#content').load('/assets/html/datenschutz.html')"><img src="/assets/html/img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
+    -->
   </div>
 
 </div>
