--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -13,6 +13,7 @@
     <script src="/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
     <script src="/assets/html/third-party/notify.min.js"></script>
     <link  rel="stylesheet" href="/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
+    <script src="/assets/html/js/oorep_local.js"></script>
     <link rel="stylesheet" href="/assets/html/mystyle.css">
 
     <title>OOREP &mdash; open online homeopathic repertorisation</title>
