--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -222,7 +222,10 @@
   </div>
 
   <div class="col text-center">
-    <a href="javascript:void(0)" onclick="$('#content').load('/assets/html/cookies.html')"><img src="/assets/html/img/englishflag.png" alt="English version of this document"></a>
+    <a href="#" onclick="oorepLoadIntoContentDiv('/assets/html/cookies.html');"><img src="/assets/html/img/englishflag.png" alt="English version of this document"></a>
+    <!--
+    <a href="#" onclick="$('#content').load('/assets/html/cookies.html')"><img src="/assets/html/img/englishflag.png" alt="English version of this document"></a>
+    -->
   </div>
 
 </div>
