--- a/backend/public/html/index.html
+++ b/backend/public/html/index.html
@@ -11,6 +11,7 @@
     <script src="/assets/html/third-party/jquery-3.3.1.min.js"></script>
     <script src="/assets/html/third-party/popper.min.js"></script>
     <script src="/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+    <script src="/assets/html/js/oorep_local.js"></script>
     <link  rel="stylesheet" href="/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
 
     <link rel="stylesheet" href="/assets/html/mystyle.css">
