clean up application.conf, plugins.sbt and English privacy policy

--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -17,20 +17,29 @@
       handling your data.
     </p>
     
-    <h3 class="freetext">Storing of access logs</h3>
+    <h3 class="freetext">Storing of access logs on the server</h3>
 
     <p style="text-align:justify;">
       You can visit our web site without giving out any personal data.
       We are merely storing access meta data in so-called server
-      logfiles, like for example the name of a requested file on the
-      server, the date or time of this request as well the amount of
-      data transmitted and the Internet provider the request
-      originated from.  This data will only be used to uphold the
-      technical availability of this server as well as to improve the
-      level of service in general.  However, the data is <b>not</b> of
-      a nature that it would enable us to deduce or withdraw any
-      personal information from it, like who you are, what your name
-      is, where you live, etc.
+      logfiles.  These are:
+    </p>
+
+    <ul>
+      <li>Type and version of browser</li>
+      <li>Type of operating system</li>
+      <li>Referrer URL</li>
+      <li>Requested URL</li>
+      <li>Hostname of the requesting computer</li>
+      <li>Time of day at request</li>
+    </ul>
+
+    <p style="text-align:justify;">
+      This information by itself can not be used to identify a particular
+      person.  There is also no combination of this information with other
+      sources of data.  This data is used, if we have reasons to believe
+      that our services are being misused in an unlawful manner.  After four
+      weeks, the collected data is automatically deleted from our servers.
     </p>
     
     <h3 class="freetext">Use of cookies</h3>
