--- a/backend/public/html/private/index.html
+++ b/backend/public/html/private/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:image" content="https://www.oorep.com/assets/html/img/oorep_screenshot2.jpg" />
+    <meta property="og:image:secure_url" content="https://www.oorep.com/assets/html/img/oorep_screenshot2.jpg" />
+    <meta property="og:description" content="Open-source homeopathic repertory that requires only a web browser to run." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="OOREP - open online homeopathic repertorisation" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
