--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -5,7 +5,7 @@
   </div>
   
   <div class="col">
-    <h2 class="freetext">Privacy policy &amp; cookies</h2>
+    <h2 class="freetext">Privacy policy</h2>
   </div>
   
   <div class="col">
