--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -168,8 +168,11 @@
       mit freundlicher Genehmigung von Paul Dupuy, Jr. vom 9. Februar
       2019.</li>
 
-      <li>bogboen: <b>M. Boger:</b> <i>Boenninghausen's
+      <li>bogboen: <b>C. M. Boger:</b> <i>Boenninghausen's
 	  Characteristics & Repertory</i> (ca. 1905).</li>
+
+      <li>boger: <b>C. M. Boger:</b> <i>General Analysis</i>
+        (ca. 1930).</li>
 
       <li>boen: <b>C. v. Bönninghausen</b>: <i>Therapeutisches
 	  Taschenbuch</i> (ca. 1846).</li>
@@ -177,7 +180,7 @@
       <li>hering: <b>C. Hering:</b> <i>The guiding symptoms of our
       materia medica</i> (ca. 1891).</li>
       
-      <li>kent: <b>J.T. Kent:</b> <i>Repertory of the Homoeopathic
+      <li>kent: <b>J. T. Kent:</b> <i>Repertory of the Homoeopathic
 	  Materia Medica</i> (ca. 1897).</li>
 
       <li>kent-de: Übersetzung von <i>kent</i> durch Bildungswerk für
