Main commit for 0.6.0.

--- a/backend/public/html/faq.html
+++ b/backend/public/html/faq.html
@@ -121,11 +121,11 @@
     </p>
 
     <ul>
-	<li>atama: repertory of the AtamA software (derived from
-	  <i>kent</i>). Copyright <b>Anahata Software</b>. Used with
-	  friendly permission from Paul Dupuy, Jr. from Feb. 9.,
-	  2019.</li>
-	
+<!--	<li>atama: repertory of the AtamA software (derived from-->
+<!--	  <i>kent</i>). Copyright <b>Anahata Software</b>. Used with-->
+<!--	  friendly permission from Paul Dupuy, Jr. from Feb. 9.,-->
+<!--	  2019.</li>-->
+
 	<li>bogboen: <b>C. M. Boger:</b> <i>Boenninghausen's
 	    Characteristics & Repertory</i> (ca. 1905).</li>
 
