--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -163,10 +163,10 @@
     </p>
 
     <ul>
-      <li>atama: Repertorium der AtamA-Software (abgeleitet
-      von <i>kent</i>). Copyright <b>Anahata Software</b>. Verwendet
-      mit freundlicher Genehmigung von Paul Dupuy, Jr. vom 9. Februar
-      2019.</li>
+<!--      <li>atama: Repertorium der AtamA-Software (abgeleitet-->
+<!--      von <i>kent</i>). Copyright <b>Anahata Software</b>. Verwendet-->
+<!--      mit freundlicher Genehmigung von Paul Dupuy, Jr. vom 9. Februar-->
+<!--      2019.</li>-->
 
       <li>bogboen: <b>C. M. Boger:</b> <i>Boenninghausen's
 	  Characteristics & Repertory</i> (ca. 1905).</li>
