Introduce OOREP_IMPORT_REPERTORIES, more accurate repertory descriptions in faq and impressum

--- a/backend/public/html/faq.html
+++ b/backend/public/html/faq.html
@@ -121,37 +121,38 @@
     </p>
 
     <ul>
+
 <!--	<li>atama: repertory of the AtamA software (derived from-->
 <!--	  <i>kent</i>). Copyright <b>Anahata Software</b>. Used with-->
 <!--	  friendly permission from Paul Dupuy, Jr. from Feb. 9.,-->
 <!--	  2019.</li>-->
 
 	<li>bogboen: <b>C. M. Boger:</b> <i>Boenninghausen's
-	    Characteristics & Repertory</i> (ca. 1905).</li>
+	    Characteristics and Repertory</i>, Parkersburg, W. Va. (1905).</li>
 
-	<li>boger: <b>C. M. Boger:</b> <i>General Analysis</i>
-		(ca. 1930).</li>
+	<li>boger: <b>C. M. Boger:</b> <i>General Analysis</i> (ca. 1931).</li>
 
-	<li>boen: <b>C. v. Bönninghausen</b>: <i>Therapeutisches
-	    Taschenbuch</i> (ca. 1846).</li>
-	
-	<li>hering: <b>C. Hering:</b> <i>The guiding symptoms of our
-	    materia medica</i> (ca. 1891).</li>
-	
-	<li>kent: <b>J. T. Kent:</b> <i>Repertory of the Homoeopathic
-	    Materia Medica</i> (ca. 1897).</li>
-	
+	<li>boen [under development]: <b>T. F. Allen</b>: <i>Boenninghausen's
+		Therapeutic Pocket Book</i>, The Hahnemann Publishing House, Philadelphia (1891).</li>
+
+	<li>hering: <b>C. B. Kneer:</b> <i>Repertory of Hering's Guiding Symptoms of our
+	    Materia Medica</i>, B. Jain Publishers, New Delhi (reprinted 1990).</li>
+
+	<li>kent: <b>J. T. Kent:</b> <i>Repertory of the Homoeopathic Materia Medica</i>,
+		6th ed., B. Jain Publishers, New Delhi (reprinted 1993).</li>
+
 	<li>kent-de: German translation of <i>kent</i> by the
-          Bildungswerk für therapeutische Berufe/<b>Joscha
-            Körschgen</b>. Published under the terms of the GNU GPL v3
-          license as part of a
-          "<a href="https://github.com/Bergische-Akademie/OpenRep-Deutsch">fork</a>"
-          of Vladimir Polony's OpenRep software (2012).</li>
-	
+		Bildungswerk für therapeutische Berufe/<b>Joscha
+			Körschgen</b>. Published under the terms of the GPL v3
+		license as part of a
+		"<a href="https://github.com/Bergische-Akademie/OpenRep-Deutsch">fork</a>"
+		of Vladimir Polony's OpenRep software (2012).</li>
+
 	<li>publicum: repertory v0.9 of the OpenRep software (derived
-	  from <i>kent</i>). Published by <b>Vladimir Polony</b>,
-	  Stupy 24, Banska Bystrica, Slovakia under the terms of the
-	  GNU GPL v3 license (2008).</li>
+		from <i>kent</i>). Published by <b>Vladimir Polony</b>,
+		Stupy 24, Banska Bystrica, Slovakia under the terms of the
+		GPL v3 license (2008).</li>
+
     </ul>
 
     <p style="text-align:justify;">
