--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -169,19 +169,18 @@
 <!--      2019.</li>-->
 
       <li>bogboen: <b>C. M. Boger:</b> <i>Boenninghausen's
-	  Characteristics & Repertory</i> (ca. 1905).</li>
+        Characteristics and Repertory</i>, Parkersburg, W. Va. (1905).</li>
 
-      <li>boger: <b>C. M. Boger:</b> <i>General Analysis</i>
-        (ca. 1930).</li>
+      <li>boger: <b>C. M. Boger:</b> <i>General Analysis</i> (ca. 1931).</li>
 
-      <li>boen: <b>C. v. Bönninghausen</b>: <i>Therapeutisches
-	  Taschenbuch</i> (ca. 1846).</li>
+      <li>boen [in Entwicklung]: <b>T. F. Allen</b>: <i>Boenninghausen's
+        Therapeutic Pocket Book</i>, The Hahnemann Publishing House, Philadelphia (1891).</li>
 
-      <li>hering: <b>C. Hering:</b> <i>The guiding symptoms of our
-      materia medica</i> (ca. 1891).</li>
-      
-      <li>kent: <b>J. T. Kent:</b> <i>Repertory of the Homoeopathic
-	  Materia Medica</i> (ca. 1897).</li>
+      <li>hering: <b>C. B. Kneer:</b> <i>Repertory of Hering's Guiding Symptoms of our
+        Materia Medica</i>, B. Jain Publishers, New Delhi (Nachdruck von 1990).</li>
+
+      <li>kent: <b>J. T. Kent:</b> <i>Repertory of the Homoeopathic Materia Medica</i>,
+        6th ed., B. Jain Publishers, New Delhi (Nachdruck von 1993).</li>
 
       <li>kent-de: Übersetzung von <i>kent</i> durch Bildungswerk für
           therapeutische Berufe/<b>Joscha
@@ -191,9 +190,10 @@
           von Vladimir Polonys OpenRep-Software (2012).</li>
 
       <li>publicum: Repertorium v0.9 der OpenRep-Software (abgeleitet
-	von <i>kent</i>). Veröffentlicht von <b>Vladimir Polony</b>,
-	Stupy 24, Banska Bystrica, Slowakei unter der GNU GPL v3
-	Lizenz (2008).</li>
+        von <i>kent</i>). Veröffentlicht von <b>Vladimir Polony</b>,
+        Stupy 24, Banska Bystrica, Slowakei unter der GNU GPL v3
+        Lizenz (2008).</li>
+
     </ul>
 
     <p style="text-align:justify;">
