5-valued remedies are double-underlined show remedy full names in repertorisation view show multi-occurrence of remedies for entire search

--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -184,14 +184,14 @@
 
       <li>kent-de: Übersetzung von <i>kent</i> durch Bildungswerk für
           therapeutische Berufe/<b>Joscha
-          Körschgen</b>. Veröffentlicht unter der GNU GPL v3 Lizenz
+          Körschgen</b>. Veröffentlicht unter der GPL v3 Lizenz
           als Teil des
           "<a href="https://github.com/Bergische-Akademie/OpenRep-Deutsch">Forks</a>"
           von Vladimir Polonys OpenRep-Software (2012).</li>
 
       <li>publicum: Repertorium v0.9 der OpenRep-Software (abgeleitet
         von <i>kent</i>). Veröffentlicht von <b>Vladimir Polony</b>,
-        Stupy 24, Banska Bystrica, Slowakei unter der GNU GPL v3
+        Stupy 24, Banska Bystrica, Slowakei unter der GPL v3
         Lizenz (2008).</li>
 
     </ul>
