Add page and remedy cache in the browser

--- a/backend/public/html/faq.html
+++ b/backend/public/html/faq.html
@@ -98,7 +98,7 @@
 		German-speaking users) in his copious spare time.
 
 		Its source code can be freely obtained from its
-		<a href="https://gitlab.com/nondeterministic/oorep">git repository</a>.
+		<a href="https://github.com/nondeterministic/oorep">git repository</a>.
 		It is published under the so-called GNU General	Public License
 		(short: GPL) and as such, OOREP comes with no warranty, no
 		guarantees, not even fitness for a particular purpose.
@@ -211,15 +211,13 @@
     </p>
 
     <p style="text-align:justify;">
-		1. the search is currently limited to max. 130 results per
-		single look-up.  If you get this number of results, you can try
-		restricting your search by adding additional search terms.
-		For efficiency reasons, we have currently no plans of returning
-		more than 130 results per look-up. Alternatively, you can exclude
-		certain search terms to make your search more specific. So, for
-		example, rather than looking for "pain", you could look for "pain,
-		-abdomen, -head", thereby excluding all results containing "head"
-		or "abdomen".
+		1. the search returned <i>too many</i> results and you have trouble finding
+		the one that is specific to your need. If that's the case, you can try
+		restricting your search by adding additional search terms to narrow
+		the scope. Alternatively, you can <i>exclude</i> certain search terms
+		to make your search more specific. So, for example, rather than looking
+		for "pain", you could look for "pain, -abdomen, -head", thereby excluding
+		all results containing "head" or "abdomen".
     </p>
 
     <p style="text-align:justify;">
