--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -49,7 +49,7 @@
       <b>Hinweis:</b> OOREP ist kostenfreie Software, dessen
       Quell-Code unter der GPL-Lizenz veröffentlicht wurde
       (s.a. öffentliches
-      <a href="https://gitlab.com/nondeterministic/oorep">git-Repository</a>).
+      <a href="https://github.com/nondeterministic/oorep">git-Repository</a>).
       Es findet aktuell keinerlei kommerzielle Verwertung dieser
       Webseite statt.
     </p>
