Share results link, better looking on small screens

--- a/backend/public/html/contact.html
+++ b/backend/public/html/contact.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
 
   <div class="col">
-      <img src="img/logo_small.png" alt="OOREP">
+      <img src="https://www.oorep.com/assets/html/img/logo_small.png" alt="OOREP">
   </div>
 
   <div class="col">
