--- a/backend/public/html/datenschutz.html
+++ b/backend/public/html/datenschutz.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
   
   <div class="col">
-    <img src="img/logo_small.png" alt="OOREP">
+    <img src="https://www.oorep.com/assets/html/img/logo_small.png" alt="OOREP">
   </div>
 
   <div class="col">
@@ -222,7 +222,7 @@
   </div>
 
   <div class="col text-center">
-    <a href="#" onclick="oorepLoadIntoContentDiv('/assets/html/cookies.html');"><img src="/assets/html/img/englishflag.png" alt="English version of this document"></a>
+    <a href="#" onclick="oorepLoadIntoContentDiv('https://www.oorep.com/assets/html/cookies.html');"><img src="https://www.oorep.com/assets/html/img/englishflag.png" alt="English version of this document"></a>
     <!--
     <a href="#" onclick="$('#content').load('/assets/html/cookies.html')"><img src="/assets/html/img/englishflag.png" alt="English version of this document"></a>
     -->
