--- a/backend/public/html/impressum.html
+++ b/backend/public/html/impressum.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
   
   <div class="col">
-    <img src="img/logo_small.png" alt="OOREP">
+    <img src="https://www.oorep.com/assets/html/img/logo_small.png" alt="OOREP">
   </div>
 
   <div class="col">
@@ -172,6 +172,12 @@
         Characteristics and Repertory</i>, Parkersburg, W. Va. (1905).</li>
 
       <li>boger: <b>C. M. Boger:</b> <i>General Analysis</i> (ca. 1931).</li>
+
+      <li>bogsk: <b>C. M. Boger:</b> <i>A Synoptic Key of the Materia Medica</i>,
+        2nd ed., Parkersburg, W. Va. (1916).</li>
+
+      <li>bogsk-de: Übersetzung von <i>bogsk</i> durch <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2020).
+        Verwendet mit freundlicher Genehmigung von <b>Andreas Maier</b>.</li>
 
       <li>boen [in Entwicklung]: <b>T. F. Allen</b>: <i>Boenninghausen's
         Therapeutic Pocket Book</i>, The Hahnemann Publishing House, Philadelphia (1891).</li>
