--- a/backend/public/html/register.html
+++ b/backend/public/html/register.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/assets/html/mystyle.css">
     <link rel="stylesheet" href="/assets/html/signin.css">
 
-    <title>OOREP &mdash; Login</title>
+    <title>OOREP &mdash; Register</title>
 </head>
 
 <body class="text-center">
