--- a/backend/public/html/cookies.html
+++ b/backend/public/html/cookies.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
   
   <div class="col">
-    <img src="img/logo_small.png" alt="OOREP">
+    <img src="https://www.oorep.com/assets/html/img/logo_small.png" alt="OOREP">
   </div>
   
   <div class="col">
@@ -207,7 +207,7 @@
   </div>
 
   <div class="col text-center">
-    <a href="#" onclick="oorepLoadIntoContentDiv('/assets/html/datenschutz.html');"><img src="/assets/html/img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
+    <a href="#" onclick="oorepLoadIntoContentDiv('https://www.oorep.com/assets/html/datenschutz.html');"><img src="https://www.oorep.com/assets/html/img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
     <!--
     <a href="#" onclick="$('#content').load('/assets/html/datenschutz.html')"><img src="/assets/html/img/germanflag.png" alt="Deutsche Version dieses Dokuments"></a>
     -->
