--- a/backend/public/html/faq.html
+++ b/backend/public/html/faq.html
@@ -1,7 +1,7 @@
 <div class="container" style="padding-top:200px; padding-bottom:200px">
 
   <div class="col">
-	  <img src="img/logo_small.png" alt="OOREP">
+	  <img src="https://www.oorep.com/assets/html/img/logo_small.png" alt="OOREP">
   </div>
 
   <div class="col">
@@ -132,7 +132,13 @@
 
 	<li>boger: <b>C. M. Boger:</b> <i>General Analysis</i> (ca. 1931).</li>
 
-	<li>boen [under development]: <b>T. F. Allen</b>: <i>Boenninghausen's
+	<li>bogsk: <b>C. M. Boger:</b> <i>A Synoptic Key of the Materia Medica</i>,
+		2nd ed., Parkersburg, W. Va. (1916).</li>
+
+	<li>bogsk-de: German translation of <i>bogsk</i> by <a href="https://naturheilpraxis-maier.de/">Naturheilpraxis Maier</a> (2020).
+		Used with friendly permission from <b>Andreas Maier</b>.</li>
+
+	<li>boen [under development]: <b>T. F. Allen:</b> <i>Boenninghausen's
 		Therapeutic Pocket Book</i>, The Hahnemann Publishing House, Philadelphia (1891).</li>
 
 	<li>hering: <b>C. B. Kneer:</b> <i>Repertory of Hering's Guiding Symptoms of our
