--- a/backend/public/html/index.html
+++ b/backend/public/html/index.html
@@ -11,24 +11,28 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="OOREP - open online homeopathic repertorisation" />
 
+    <meta name="description" content="Open-source homeopathic repertory that requires only a web browser to run." />
+    <meta name="keywords" content="oorep, repertory, homeopathy, repertorization" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/assets/html/third-party/bootstrap-4.1.3/css/bootstrap.min.css">
     <script src="/assets/html/third-party/jquery-3.3.1.min.js"></script>
     <script src="/assets/html/third-party/popper.min.js"></script>
     <script src="/assets/html/third-party/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-    <script src="/assets/html/js/oorep_local.js"></script>
+    <script src="/assets/html/third-party/notify.min.js"></script>
     <link  rel="stylesheet" href="/assets/html/third-party/open-iconic-master/font/css/open-iconic-bootstrap.css">
-
+    <script src="/assets/html/js/oorep_local.js"></script>
     <link rel="stylesheet" href="/assets/html/mystyle.css">
 
     <title>OOREP &mdash; open online homeopathic repertorisation</title>
   </head>
   
   <body>
-    <!-- Include Scala.js compiled code -->
-    <!-- <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-jsdeps.js"></script> -->
-    <!-- <script type="text/javascript" src="../../../frontend/target/scala-2.12/frontend-fastopt.js"></script> -->
     <script type="text/javascript" charset="ISO-8859-1" src="/assets/frontend-opt.js"></script>
-
+    <noscript>
+      <div class="alert alert-danger text-center" role="alert">
+        OOREP requires JavaScript. Turn it on in your browser and reload the page, please.
+      </div>
+    </noscript>
   </body>
 </html>
